--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.7.1"
+    "mysql2": "^3.7.1",
+    "nodemailer": "^6.9.8"
   }
 }
