restart in 10 segundos

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon index"
+    "start": "npx nodemon --delay 10000 index"
   },
   "author": "",
   "license": "ISC",
